# Makefile.am for building the qla_df2 library

AUTOMAKE_OPTIONS = no-dependencies

QLASRC1 = \
QLA_DF2_c_eq_D_dot_D.c \
QLA_DF2_c_eq_H_dot_H.c \
QLA_DF2_c_eqm_D_dot_D.c \
QLA_DF2_c_eq_M_dot_M.c \
QLA_DF2_c_eqm_H_dot_H.c \
QLA_DF2_c_eqm_M_dot_M.c \
QLA_DF2_c_eqm_P_dot_P.c \
QLA_DF2_c_eqm_V_dot_V.c \
QLA_DF2_c_eq_P_dot_P.c \
QLA_DF2_c_eq_V_dot_V.c \
QLA_DF2_c_meq_D_dot_D.c \
QLA_DF2_c_meq_H_dot_H.c \
QLA_DF2_c_meq_M_dot_M.c \
QLA_DF2_c_meq_P_dot_P.c \
QLA_DF2_c_meq_V_dot_V.c \
QLA_DF2_c_peq_D_dot_D.c \
QLA_DF2_c_peq_H_dot_H.c \
QLA_DF2_c_peq_M_dot_M.c \
QLA_DF2_c_peq_P_dot_P.c \
QLA_DF2_c_peq_V_dot_V.c \
QLA_DF2_c_veq_D_dot_D.c \
QLA_DF2_c_veq_D_dot_pD.c \
QLA_DF2_c_veq_H_dot_H.c \
QLA_DF2_c_veq_H_dot_pH.c \
QLA_DF2_c_veqm_D_dot_D.c \
QLA_DF2_c_veqm_D_dot_pD.c \
QLA_DF2_c_veq_M_dot_M.c \
QLA_DF2_c_veq_M_dot_pM.c \
QLA_DF2_c_veqm_H_dot_H.c \
QLA_DF2_c_veqm_H_dot_pH.c \
QLA_DF2_c_veqm_M_dot_M.c \
QLA_DF2_c_veqm_M_dot_pM.c \
QLA_DF2_c_veqm_pD_dot_D.c \
QLA_DF2_c_veqm_pD_dot_pD.c \
QLA_DF2_c_veqm_P_dot_P.c \
QLA_DF2_c_veqm_P_dot_pP.c \
QLA_DF2_c_veqm_pH_dot_H.c \
QLA_DF2_c_veqm_pH_dot_pH.c \
QLA_DF2_c_veqm_pM_dot_M.c \
QLA_DF2_c_veqm_pM_dot_pM.c \
QLA_DF2_c_veqm_pP_dot_P.c \
QLA_DF2_c_veqm_pP_dot_pP.c \
QLA_DF2_c_veqm_pV_dot_pV.c \
QLA_DF2_c_veqm_pV_dot_V.c \
QLA_DF2_c_veqm_V_dot_pV.c \
QLA_DF2_c_veqm_V_dot_V.c \
QLA_DF2_c_veq_pD_dot_D.c \
QLA_DF2_c_veq_pD_dot_pD.c \
QLA_DF2_c_veq_P_dot_P.c \
QLA_DF2_c_veq_P_dot_pP.c \
QLA_DF2_c_veq_pH_dot_H.c \
QLA_DF2_c_veq_pH_dot_pH.c \
QLA_DF2_c_veq_pM_dot_M.c \
QLA_DF2_c_veq_pM_dot_pM.c \
QLA_DF2_c_veq_pP_dot_P.c \
QLA_DF2_c_veq_pP_dot_pP.c \
QLA_DF2_c_veq_pV_dot_pV.c \
QLA_DF2_c_veq_pV_dot_V.c \
QLA_DF2_c_veq_V_dot_pV.c \
QLA_DF2_c_veq_V_dot_V.c \
QLA_DF2_c_vmeq_D_dot_D.c \
QLA_DF2_c_vmeq_D_dot_pD.c \
QLA_DF2_c_vmeq_H_dot_H.c \
QLA_DF2_c_vmeq_H_dot_pH.c \
QLA_DF2_c_vmeq_M_dot_M.c \
QLA_DF2_c_vmeq_M_dot_pM.c \
QLA_DF2_c_vmeq_pD_dot_D.c \
QLA_DF2_c_vmeq_pD_dot_pD.c \
QLA_DF2_c_vmeq_P_dot_P.c \
QLA_DF2_c_vmeq_P_dot_pP.c \
QLA_DF2_c_vmeq_pH_dot_H.c \
QLA_DF2_c_vmeq_pH_dot_pH.c \
QLA_DF2_c_vmeq_pM_dot_M.c \
QLA_DF2_c_vmeq_pM_dot_pM.c \
QLA_DF2_c_vmeq_pP_dot_P.c \
QLA_DF2_c_vmeq_pP_dot_pP.c \
QLA_DF2_c_vmeq_pV_dot_pV.c \
QLA_DF2_c_vmeq_pV_dot_V.c \
QLA_DF2_c_vmeq_V_dot_pV.c \
QLA_DF2_c_vmeq_V_dot_V.c \
QLA_DF2_c_vpeq_D_dot_D.c \
QLA_DF2_c_vpeq_D_dot_pD.c \
QLA_DF2_c_vpeq_H_dot_H.c \
QLA_DF2_c_vpeq_H_dot_pH.c \
QLA_DF2_c_vpeq_M_dot_M.c \
QLA_DF2_c_vpeq_M_dot_pM.c \
QLA_DF2_c_vpeq_pD_dot_D.c \
QLA_DF2_c_vpeq_pD_dot_pD.c \
QLA_DF2_c_vpeq_P_dot_P.c \
QLA_DF2_c_vpeq_P_dot_pP.c \
QLA_DF2_c_vpeq_pH_dot_H.c \
QLA_DF2_c_vpeq_pH_dot_pH.c \
QLA_DF2_c_vpeq_pM_dot_M.c \
QLA_DF2_c_vpeq_pM_dot_pM.c \
QLA_DF2_c_vpeq_pP_dot_P.c \
QLA_DF2_c_vpeq_pP_dot_pP.c \
QLA_DF2_c_vpeq_pV_dot_pV.c \
QLA_DF2_c_vpeq_pV_dot_V.c \
QLA_DF2_c_vpeq_V_dot_pV.c \
QLA_DF2_c_vpeq_V_dot_V.c \
QLA_DF2_c_xeq_D_dot_D.c \
QLA_DF2_c_xeq_D_dot_pD.c \
QLA_DF2_c_xeq_H_dot_H.c \
QLA_DF2_c_xeq_H_dot_pH.c \
QLA_DF2_c_xeqm_D_dot_D.c \
QLA_DF2_c_xeqm_D_dot_pD.c \
QLA_DF2_c_xeq_M_dot_M.c \
QLA_DF2_c_xeq_M_dot_pM.c \
QLA_DF2_c_xeqm_H_dot_H.c \
QLA_DF2_c_xeqm_H_dot_pH.c \
QLA_DF2_c_xeqm_M_dot_M.c \
QLA_DF2_c_xeqm_M_dot_pM.c \
QLA_DF2_c_xeqm_pD_dot_D.c \
QLA_DF2_c_xeqm_pD_dot_pD.c \
QLA_DF2_c_xeqm_P_dot_P.c \
QLA_DF2_c_xeqm_P_dot_pP.c \
QLA_DF2_c_xeqm_pH_dot_H.c \
QLA_DF2_c_xeqm_pH_dot_pH.c \
QLA_DF2_c_xeqm_pM_dot_M.c \
QLA_DF2_c_xeqm_pM_dot_pM.c \
QLA_DF2_c_xeqm_pP_dot_P.c \
QLA_DF2_c_xeqm_pP_dot_pP.c \
QLA_DF2_c_xeqm_pV_dot_pV.c \
QLA_DF2_c_xeqm_pV_dot_V.c \
QLA_DF2_c_xeqm_V_dot_pV.c \
QLA_DF2_c_xeqm_V_dot_V.c \
QLA_DF2_c_xeq_pD_dot_D.c \
QLA_DF2_c_xeq_pD_dot_pD.c \
QLA_DF2_c_xeq_P_dot_P.c \
QLA_DF2_c_xeq_P_dot_pP.c \
QLA_DF2_c_xeq_pH_dot_H.c \
QLA_DF2_c_xeq_pH_dot_pH.c \
QLA_DF2_c_xeq_pM_dot_M.c \
QLA_DF2_c_xeq_pM_dot_pM.c \
QLA_DF2_c_xeq_pP_dot_P.c \
QLA_DF2_c_xeq_pP_dot_pP.c \
QLA_DF2_c_xeq_pV_dot_pV.c \
QLA_DF2_c_xeq_pV_dot_V.c \
QLA_DF2_c_xeq_V_dot_pV.c \
QLA_DF2_c_xeq_V_dot_V.c \
QLA_DF2_c_xmeq_D_dot_D.c \
QLA_DF2_c_xmeq_D_dot_pD.c \
QLA_DF2_c_xmeq_H_dot_H.c \
QLA_DF2_c_xmeq_H_dot_pH.c \
QLA_DF2_c_xmeq_M_dot_M.c \
QLA_DF2_c_xmeq_M_dot_pM.c \
QLA_DF2_c_xmeq_pD_dot_D.c \
QLA_DF2_c_xmeq_pD_dot_pD.c \
QLA_DF2_c_xmeq_P_dot_P.c \
QLA_DF2_c_xmeq_P_dot_pP.c \
QLA_DF2_c_xmeq_pH_dot_H.c \
QLA_DF2_c_xmeq_pH_dot_pH.c \
QLA_DF2_c_xmeq_pM_dot_M.c \
QLA_DF2_c_xmeq_pM_dot_pM.c \
QLA_DF2_c_xmeq_pP_dot_P.c \
QLA_DF2_c_xmeq_pP_dot_pP.c \
QLA_DF2_c_xmeq_pV_dot_pV.c \
QLA_DF2_c_xmeq_pV_dot_V.c \
QLA_DF2_c_xmeq_V_dot_pV.c \
QLA_DF2_c_xmeq_V_dot_V.c \
QLA_DF2_c_xpeq_D_dot_D.c \
QLA_DF2_c_xpeq_D_dot_pD.c \
QLA_DF2_c_xpeq_H_dot_H.c \
QLA_DF2_c_xpeq_H_dot_pH.c \
QLA_DF2_c_xpeq_M_dot_M.c \
QLA_DF2_c_xpeq_M_dot_pM.c \
QLA_DF2_c_xpeq_pD_dot_D.c \
QLA_DF2_c_xpeq_pD_dot_pD.c \
QLA_DF2_c_xpeq_P_dot_P.c \
QLA_DF2_c_xpeq_P_dot_pP.c \
QLA_DF2_c_xpeq_pH_dot_H.c \
QLA_DF2_c_xpeq_pH_dot_pH.c \
QLA_DF2_c_xpeq_pM_dot_M.c \
QLA_DF2_c_xpeq_pM_dot_pM.c \
QLA_DF2_c_xpeq_pP_dot_P.c \
QLA_DF2_c_xpeq_pP_dot_pP.c \
QLA_DF2_c_xpeq_pV_dot_pV.c \
QLA_DF2_c_xpeq_pV_dot_V.c \
QLA_DF2_c_xpeq_V_dot_pV.c \
QLA_DF2_c_xpeq_V_dot_V.c \
QLA_DF2_D_eq_D.c \
QLA_DF2_d_eqm_sum_D.c \
QLA_DF2_d_eq_sum_D.c \
QLA_DF2_d_meq_sum_D.c \
QLA_DF2_d_peq_sum_D.c \
QLA_DF2_D_veq_D.c \
QLA_DF2_d_veqm_sum_D.c \
QLA_DF2_d_veqm_sum_pD.c \
QLA_DF2_D_veq_pD.c \
QLA_DF2_d_veq_sum_D.c \
QLA_DF2_d_veq_sum_pD.c \
QLA_DF2_d_vmeq_sum_D.c \
QLA_DF2_d_vmeq_sum_pD.c \
QLA_DF2_d_vpeq_sum_D.c \
QLA_DF2_d_vpeq_sum_pD.c \
QLA_DF2_D_xeq_D.c \
QLA_DF2_d_xeqm_sum_D.c \
QLA_DF2_d_xeqm_sum_pD.c \
QLA_DF2_D_xeq_pD.c \
QLA_DF2_d_xeq_sum_D.c \
QLA_DF2_d_xeq_sum_pD.c \
QLA_DF2_d_xmeq_sum_D.c \
QLA_DF2_d_xmeq_sum_pD.c \
QLA_DF2_d_xpeq_sum_D.c \
QLA_DF2_d_xpeq_sum_pD.c \
QLA_DF2_H_eq_H.c \
QLA_DF2_h_eqm_sum_H.c \
QLA_DF2_h_eq_sum_H.c \
QLA_DF2_h_meq_sum_H.c \
QLA_DF2_h_peq_sum_H.c \
QLA_DF2_H_veq_H.c \
QLA_DF2_h_veqm_sum_H.c \
QLA_DF2_h_veqm_sum_pH.c \
QLA_DF2_H_veq_pH.c \
QLA_DF2_h_veq_sum_H.c \
QLA_DF2_h_veq_sum_pH.c \
QLA_DF2_h_vmeq_sum_H.c \
QLA_DF2_h_vmeq_sum_pH.c \
QLA_DF2_h_vpeq_sum_H.c \
QLA_DF2_h_vpeq_sum_pH.c \
QLA_DF2_H_xeq_H.c \
QLA_DF2_h_xeqm_sum_H.c \
QLA_DF2_h_xeqm_sum_pH.c \
QLA_DF2_H_xeq_pH.c \
QLA_DF2_h_xeq_sum_H.c \
QLA_DF2_h_xeq_sum_pH.c \
QLA_DF2_h_xmeq_sum_H.c \
QLA_DF2_h_xmeq_sum_pH.c \
QLA_DF2_h_xpeq_sum_H.c \
QLA_DF2_h_xpeq_sum_pH.c \
QLA_DF2_M_eq_M.c \
QLA_DF2_m_eqm_sum_M.c \
QLA_DF2_m_eq_sum_M.c \
QLA_DF2_m_meq_sum_M.c \
QLA_DF2_m_peq_sum_M.c \
QLA_DF2_M_veq_M.c \
QLA_DF2_m_veqm_sum_M.c \
QLA_DF2_m_veqm_sum_pM.c \
QLA_DF2_M_veq_pM.c \
QLA_DF2_m_veq_sum_M.c \
QLA_DF2_m_veq_sum_pM.c \
QLA_DF2_m_vmeq_sum_M.c \
QLA_DF2_m_vmeq_sum_pM.c \
QLA_DF2_m_vpeq_sum_M.c \
QLA_DF2_m_vpeq_sum_pM.c \
QLA_DF2_M_xeq_M.c \
QLA_DF2_m_xeqm_sum_M.c \
QLA_DF2_m_xeqm_sum_pM.c \
QLA_DF2_M_xeq_pM.c \
QLA_DF2_m_xeq_sum_M.c \
QLA_DF2_m_xeq_sum_pM.c \
QLA_DF2_m_xmeq_sum_M.c \
QLA_DF2_m_xmeq_sum_pM.c \
QLA_DF2_m_xpeq_sum_M.c \
QLA_DF2_m_xpeq_sum_pM.c \
QLA_DF2_p_eqm_sum_P.c \
QLA_DF2_P_eq_P.c \
QLA_DF2_p_eq_sum_P.c \
QLA_DF2_p_meq_sum_P.c \
QLA_DF2_p_peq_sum_P.c \
QLA_DF2_p_veqm_sum_P.c \
QLA_DF2_p_veqm_sum_pP.c \
QLA_DF2_P_veq_P.c \
QLA_DF2_P_veq_pP.c \
QLA_DF2_p_veq_sum_P.c \
QLA_DF2_p_veq_sum_pP.c \
QLA_DF2_p_vmeq_sum_P.c \
QLA_DF2_p_vmeq_sum_pP.c \
QLA_DF2_p_vpeq_sum_P.c \
QLA_DF2_p_vpeq_sum_pP.c \
QLA_DF2_p_xeqm_sum_P.c \
QLA_DF2_p_xeqm_sum_pP.c \
QLA_DF2_P_xeq_P.c \
QLA_DF2_P_xeq_pP.c \
QLA_DF2_p_xeq_sum_P.c \
QLA_DF2_p_xeq_sum_pP.c \
QLA_DF2_p_xmeq_sum_P.c \
QLA_DF2_p_xmeq_sum_pP.c \
QLA_DF2_p_xpeq_sum_P.c \
QLA_DF2_p_xpeq_sum_pP.c \
QLA_DF2_r_eqm_norm2_D.c \
QLA_DF2_r_eqm_norm2_H.c \
QLA_DF2_r_eqm_norm2_M.c \
QLA_DF2_r_eqm_norm2_P.c \
QLA_DF2_r_eqm_norm2_V.c \
QLA_DF2_r_eqm_re_D_dot_D.c \
QLA_DF2_r_eqm_re_H_dot_H.c \
QLA_DF2_r_eqm_re_M_dot_M.c \
QLA_DF2_r_eqm_re_P_dot_P.c \
QLA_DF2_r_eqm_re_V_dot_V.c \
QLA_DF2_r_eq_norm2_D.c \
QLA_DF2_r_eq_norm2_H.c \
QLA_DF2_r_eq_norm2_M.c \
QLA_DF2_r_eq_norm2_P.c \
QLA_DF2_r_eq_norm2_V.c \
QLA_DF2_r_eq_re_D_dot_D.c \
QLA_DF2_r_eq_re_H_dot_H.c \
QLA_DF2_r_eq_re_M_dot_M.c \
QLA_DF2_r_eq_re_P_dot_P.c \
QLA_DF2_r_eq_re_V_dot_V.c \
QLA_DF2_r_meq_norm2_D.c \
QLA_DF2_r_meq_norm2_H.c \
QLA_DF2_r_meq_norm2_M.c \
QLA_DF2_r_meq_norm2_P.c \
QLA_DF2_r_meq_norm2_V.c \
QLA_DF2_r_meq_re_D_dot_D.c \
QLA_DF2_r_meq_re_H_dot_H.c \
QLA_DF2_r_meq_re_M_dot_M.c \
QLA_DF2_r_meq_re_P_dot_P.c \
QLA_DF2_r_meq_re_V_dot_V.c \
QLA_DF2_r_peq_norm2_D.c \
QLA_DF2_r_peq_norm2_H.c \
QLA_DF2_r_peq_norm2_M.c \
QLA_DF2_r_peq_norm2_P.c \
QLA_DF2_r_peq_norm2_V.c \
QLA_DF2_r_peq_re_D_dot_D.c \
QLA_DF2_r_peq_re_H_dot_H.c \
QLA_DF2_r_peq_re_M_dot_M.c \
QLA_DF2_r_peq_re_P_dot_P.c \
QLA_DF2_r_peq_re_V_dot_V.c \
QLA_DF2_r_veqm_norm2_D.c \
QLA_DF2_r_veqm_norm2_H.c \
QLA_DF2_r_veqm_norm2_M.c \
QLA_DF2_r_veqm_norm2_P.c \
QLA_DF2_r_veqm_norm2_pD.c \
QLA_DF2_r_veqm_norm2_pH.c \
QLA_DF2_r_veqm_norm2_pM.c \
QLA_DF2_r_veqm_norm2_pP.c \
QLA_DF2_r_veqm_norm2_pV.c \
QLA_DF2_r_veqm_norm2_V.c \
QLA_DF2_r_veqm_re_D_dot_D.c \
QLA_DF2_r_veqm_re_D_dot_pD.c \
QLA_DF2_r_veqm_re_H_dot_H.c \
QLA_DF2_r_veqm_re_H_dot_pH.c \
QLA_DF2_r_veqm_re_M_dot_M.c \
QLA_DF2_r_veqm_re_M_dot_pM.c \
QLA_DF2_r_veqm_re_pD_dot_D.c \
QLA_DF2_r_veqm_re_pD_dot_pD.c \
QLA_DF2_r_veqm_re_P_dot_P.c \
QLA_DF2_r_veqm_re_P_dot_pP.c \
QLA_DF2_r_veqm_re_pH_dot_H.c \
QLA_DF2_r_veqm_re_pH_dot_pH.c \
QLA_DF2_r_veqm_re_pM_dot_M.c \
QLA_DF2_r_veqm_re_pM_dot_pM.c \
QLA_DF2_r_veqm_re_pP_dot_P.c \
QLA_DF2_r_veqm_re_pP_dot_pP.c \
QLA_DF2_r_veqm_re_pV_dot_pV.c \
QLA_DF2_r_veqm_re_pV_dot_V.c \
QLA_DF2_r_veqm_re_V_dot_pV.c \
QLA_DF2_r_veqm_re_V_dot_V.c \
QLA_DF2_r_veq_norm2_D.c \
QLA_DF2_r_veq_norm2_H.c \
QLA_DF2_r_veq_norm2_M.c \
QLA_DF2_r_veq_norm2_P.c \
QLA_DF2_r_veq_norm2_pD.c \
QLA_DF2_r_veq_norm2_pH.c \
QLA_DF2_r_veq_norm2_pM.c \
QLA_DF2_r_veq_norm2_pP.c \
QLA_DF2_r_veq_norm2_pV.c \
QLA_DF2_r_veq_norm2_V.c \
QLA_DF2_r_veq_re_D_dot_D.c \
QLA_DF2_r_veq_re_D_dot_pD.c \
QLA_DF2_r_veq_re_H_dot_H.c \
QLA_DF2_r_veq_re_H_dot_pH.c \
QLA_DF2_r_veq_re_M_dot_M.c \
QLA_DF2_r_veq_re_M_dot_pM.c \
QLA_DF2_r_veq_re_pD_dot_D.c \
QLA_DF2_r_veq_re_pD_dot_pD.c \
QLA_DF2_r_veq_re_P_dot_P.c \
QLA_DF2_r_veq_re_P_dot_pP.c \
QLA_DF2_r_veq_re_pH_dot_H.c \
QLA_DF2_r_veq_re_pH_dot_pH.c \
QLA_DF2_r_veq_re_pM_dot_M.c \
QLA_DF2_r_veq_re_pM_dot_pM.c \
QLA_DF2_r_veq_re_pP_dot_P.c \
QLA_DF2_r_veq_re_pP_dot_pP.c \
QLA_DF2_r_veq_re_pV_dot_pV.c \
QLA_DF2_r_veq_re_pV_dot_V.c \
QLA_DF2_r_veq_re_V_dot_pV.c \
QLA_DF2_r_veq_re_V_dot_V.c \
QLA_DF2_r_vmeq_norm2_D.c \
QLA_DF2_r_vmeq_norm2_H.c \
QLA_DF2_r_vmeq_norm2_M.c \
QLA_DF2_r_vmeq_norm2_P.c \
QLA_DF2_r_vmeq_norm2_pD.c \
QLA_DF2_r_vmeq_norm2_pH.c \
QLA_DF2_r_vmeq_norm2_pM.c \
QLA_DF2_r_vmeq_norm2_pP.c \
QLA_DF2_r_vmeq_norm2_pV.c \
QLA_DF2_r_vmeq_norm2_V.c \
QLA_DF2_r_vmeq_re_D_dot_D.c \
QLA_DF2_r_vmeq_re_D_dot_pD.c \
QLA_DF2_r_vmeq_re_H_dot_H.c \
QLA_DF2_r_vmeq_re_H_dot_pH.c \
QLA_DF2_r_vmeq_re_M_dot_M.c \
QLA_DF2_r_vmeq_re_M_dot_pM.c \
QLA_DF2_r_vmeq_re_pD_dot_D.c \
QLA_DF2_r_vmeq_re_pD_dot_pD.c \
QLA_DF2_r_vmeq_re_P_dot_P.c \
QLA_DF2_r_vmeq_re_P_dot_pP.c \
QLA_DF2_r_vmeq_re_pH_dot_H.c \
QLA_DF2_r_vmeq_re_pH_dot_pH.c \
QLA_DF2_r_vmeq_re_pM_dot_M.c \
QLA_DF2_r_vmeq_re_pM_dot_pM.c \
QLA_DF2_r_vmeq_re_pP_dot_P.c \
QLA_DF2_r_vmeq_re_pP_dot_pP.c \
QLA_DF2_r_vmeq_re_pV_dot_pV.c \
QLA_DF2_r_vmeq_re_pV_dot_V.c \
QLA_DF2_r_vmeq_re_V_dot_pV.c \
QLA_DF2_r_vmeq_re_V_dot_V.c \
QLA_DF2_r_vpeq_norm2_D.c \
QLA_DF2_r_vpeq_norm2_H.c \
QLA_DF2_r_vpeq_norm2_M.c \
QLA_DF2_r_vpeq_norm2_P.c \
QLA_DF2_r_vpeq_norm2_pD.c \
QLA_DF2_r_vpeq_norm2_pH.c \
QLA_DF2_r_vpeq_norm2_pM.c \
QLA_DF2_r_vpeq_norm2_pP.c \
QLA_DF2_r_vpeq_norm2_pV.c \
QLA_DF2_r_vpeq_norm2_V.c \
QLA_DF2_r_vpeq_re_D_dot_D.c \
QLA_DF2_r_vpeq_re_D_dot_pD.c \
QLA_DF2_r_vpeq_re_H_dot_H.c \
QLA_DF2_r_vpeq_re_H_dot_pH.c \
QLA_DF2_r_vpeq_re_M_dot_M.c \
QLA_DF2_r_vpeq_re_M_dot_pM.c \
QLA_DF2_r_vpeq_re_pD_dot_D.c \
QLA_DF2_r_vpeq_re_pD_dot_pD.c \
QLA_DF2_r_vpeq_re_P_dot_P.c \
QLA_DF2_r_vpeq_re_P_dot_pP.c \
QLA_DF2_r_vpeq_re_pH_dot_H.c \
QLA_DF2_r_vpeq_re_pH_dot_pH.c \
QLA_DF2_r_vpeq_re_pM_dot_M.c \
QLA_DF2_r_vpeq_re_pM_dot_pM.c \
QLA_DF2_r_vpeq_re_pP_dot_P.c \
QLA_DF2_r_vpeq_re_pP_dot_pP.c \
QLA_DF2_r_vpeq_re_pV_dot_pV.c \
QLA_DF2_r_vpeq_re_pV_dot_V.c \
QLA_DF2_r_vpeq_re_V_dot_pV.c \
QLA_DF2_r_vpeq_re_V_dot_V.c \
QLA_DF2_r_xeqm_norm2_D.c \
QLA_DF2_r_xeqm_norm2_H.c \
QLA_DF2_r_xeqm_norm2_M.c \
QLA_DF2_r_xeqm_norm2_P.c \
QLA_DF2_r_xeqm_norm2_pD.c \
QLA_DF2_r_xeqm_norm2_pH.c \
QLA_DF2_r_xeqm_norm2_pM.c \
QLA_DF2_r_xeqm_norm2_pP.c \
QLA_DF2_r_xeqm_norm2_pV.c \
QLA_DF2_r_xeqm_norm2_V.c \
QLA_DF2_r_xeqm_re_D_dot_D.c \
QLA_DF2_r_xeqm_re_D_dot_pD.c \
QLA_DF2_r_xeqm_re_H_dot_H.c \
QLA_DF2_r_xeqm_re_H_dot_pH.c \
QLA_DF2_r_xeqm_re_M_dot_M.c \
QLA_DF2_r_xeqm_re_M_dot_pM.c \
QLA_DF2_r_xeqm_re_pD_dot_D.c \
QLA_DF2_r_xeqm_re_pD_dot_pD.c \
QLA_DF2_r_xeqm_re_P_dot_P.c \
QLA_DF2_r_xeqm_re_P_dot_pP.c \
QLA_DF2_r_xeqm_re_pH_dot_H.c \
QLA_DF2_r_xeqm_re_pH_dot_pH.c \
QLA_DF2_r_xeqm_re_pM_dot_M.c \
QLA_DF2_r_xeqm_re_pM_dot_pM.c \
QLA_DF2_r_xeqm_re_pP_dot_P.c \
QLA_DF2_r_xeqm_re_pP_dot_pP.c \
QLA_DF2_r_xeqm_re_pV_dot_pV.c \
QLA_DF2_r_xeqm_re_pV_dot_V.c \
QLA_DF2_r_xeqm_re_V_dot_pV.c \
QLA_DF2_r_xeqm_re_V_dot_V.c \
QLA_DF2_r_xeq_norm2_D.c \
QLA_DF2_r_xeq_norm2_H.c \
QLA_DF2_r_xeq_norm2_M.c \
QLA_DF2_r_xeq_norm2_P.c \
QLA_DF2_r_xeq_norm2_pD.c \
QLA_DF2_r_xeq_norm2_pH.c \
QLA_DF2_r_xeq_norm2_pM.c \
QLA_DF2_r_xeq_norm2_pP.c \
QLA_DF2_r_xeq_norm2_pV.c \
QLA_DF2_r_xeq_norm2_V.c \
QLA_DF2_r_xeq_re_D_dot_D.c \
QLA_DF2_r_xeq_re_D_dot_pD.c \
QLA_DF2_r_xeq_re_H_dot_H.c \
QLA_DF2_r_xeq_re_H_dot_pH.c \
QLA_DF2_r_xeq_re_M_dot_M.c \
QLA_DF2_r_xeq_re_M_dot_pM.c \
QLA_DF2_r_xeq_re_pD_dot_D.c \
QLA_DF2_r_xeq_re_pD_dot_pD.c \
QLA_DF2_r_xeq_re_P_dot_P.c \
QLA_DF2_r_xeq_re_P_dot_pP.c \
QLA_DF2_r_xeq_re_pH_dot_H.c \
QLA_DF2_r_xeq_re_pH_dot_pH.c \
QLA_DF2_r_xeq_re_pM_dot_M.c \
QLA_DF2_r_xeq_re_pM_dot_pM.c \
QLA_DF2_r_xeq_re_pP_dot_P.c \
QLA_DF2_r_xeq_re_pP_dot_pP.c \
QLA_DF2_r_xeq_re_pV_dot_pV.c \
QLA_DF2_r_xeq_re_pV_dot_V.c \
QLA_DF2_r_xeq_re_V_dot_pV.c \
QLA_DF2_r_xeq_re_V_dot_V.c

QLAOBJ1 = \
QLA_DF2_c_eq_D_dot_D.o \
QLA_DF2_c_eq_H_dot_H.o \
QLA_DF2_c_eqm_D_dot_D.o \
QLA_DF2_c_eq_M_dot_M.o \
QLA_DF2_c_eqm_H_dot_H.o \
QLA_DF2_c_eqm_M_dot_M.o \
QLA_DF2_c_eqm_P_dot_P.o \
QLA_DF2_c_eqm_V_dot_V.o \
QLA_DF2_c_eq_P_dot_P.o \
QLA_DF2_c_eq_V_dot_V.o \
QLA_DF2_c_meq_D_dot_D.o \
QLA_DF2_c_meq_H_dot_H.o \
QLA_DF2_c_meq_M_dot_M.o \
QLA_DF2_c_meq_P_dot_P.o \
QLA_DF2_c_meq_V_dot_V.o \
QLA_DF2_c_peq_D_dot_D.o \
QLA_DF2_c_peq_H_dot_H.o \
QLA_DF2_c_peq_M_dot_M.o \
QLA_DF2_c_peq_P_dot_P.o \
QLA_DF2_c_peq_V_dot_V.o \
QLA_DF2_c_veq_D_dot_D.o \
QLA_DF2_c_veq_D_dot_pD.o \
QLA_DF2_c_veq_H_dot_H.o \
QLA_DF2_c_veq_H_dot_pH.o \
QLA_DF2_c_veqm_D_dot_D.o \
QLA_DF2_c_veqm_D_dot_pD.o \
QLA_DF2_c_veq_M_dot_M.o \
QLA_DF2_c_veq_M_dot_pM.o \
QLA_DF2_c_veqm_H_dot_H.o \
QLA_DF2_c_veqm_H_dot_pH.o \
QLA_DF2_c_veqm_M_dot_M.o \
QLA_DF2_c_veqm_M_dot_pM.o \
QLA_DF2_c_veqm_pD_dot_D.o \
QLA_DF2_c_veqm_pD_dot_pD.o \
QLA_DF2_c_veqm_P_dot_P.o \
QLA_DF2_c_veqm_P_dot_pP.o \
QLA_DF2_c_veqm_pH_dot_H.o \
QLA_DF2_c_veqm_pH_dot_pH.o \
QLA_DF2_c_veqm_pM_dot_M.o \
QLA_DF2_c_veqm_pM_dot_pM.o \
QLA_DF2_c_veqm_pP_dot_P.o \
QLA_DF2_c_veqm_pP_dot_pP.o \
QLA_DF2_c_veqm_pV_dot_pV.o \
QLA_DF2_c_veqm_pV_dot_V.o \
QLA_DF2_c_veqm_V_dot_pV.o \
QLA_DF2_c_veqm_V_dot_V.o \
QLA_DF2_c_veq_pD_dot_D.o \
QLA_DF2_c_veq_pD_dot_pD.o \
QLA_DF2_c_veq_P_dot_P.o \
QLA_DF2_c_veq_P_dot_pP.o \
QLA_DF2_c_veq_pH_dot_H.o \
QLA_DF2_c_veq_pH_dot_pH.o \
QLA_DF2_c_veq_pM_dot_M.o \
QLA_DF2_c_veq_pM_dot_pM.o \
QLA_DF2_c_veq_pP_dot_P.o \
QLA_DF2_c_veq_pP_dot_pP.o \
QLA_DF2_c_veq_pV_dot_pV.o \
QLA_DF2_c_veq_pV_dot_V.o \
QLA_DF2_c_veq_V_dot_pV.o \
QLA_DF2_c_veq_V_dot_V.o \
QLA_DF2_c_vmeq_D_dot_D.o \
QLA_DF2_c_vmeq_D_dot_pD.o \
QLA_DF2_c_vmeq_H_dot_H.o \
QLA_DF2_c_vmeq_H_dot_pH.o \
QLA_DF2_c_vmeq_M_dot_M.o \
QLA_DF2_c_vmeq_M_dot_pM.o \
QLA_DF2_c_vmeq_pD_dot_D.o \
QLA_DF2_c_vmeq_pD_dot_pD.o \
QLA_DF2_c_vmeq_P_dot_P.o \
QLA_DF2_c_vmeq_P_dot_pP.o \
QLA_DF2_c_vmeq_pH_dot_H.o \
QLA_DF2_c_vmeq_pH_dot_pH.o \
QLA_DF2_c_vmeq_pM_dot_M.o \
QLA_DF2_c_vmeq_pM_dot_pM.o \
QLA_DF2_c_vmeq_pP_dot_P.o \
QLA_DF2_c_vmeq_pP_dot_pP.o \
QLA_DF2_c_vmeq_pV_dot_pV.o \
QLA_DF2_c_vmeq_pV_dot_V.o \
QLA_DF2_c_vmeq_V_dot_pV.o \
QLA_DF2_c_vmeq_V_dot_V.o \
QLA_DF2_c_vpeq_D_dot_D.o \
QLA_DF2_c_vpeq_D_dot_pD.o \
QLA_DF2_c_vpeq_H_dot_H.o \
QLA_DF2_c_vpeq_H_dot_pH.o \
QLA_DF2_c_vpeq_M_dot_M.o \
QLA_DF2_c_vpeq_M_dot_pM.o \
QLA_DF2_c_vpeq_pD_dot_D.o \
QLA_DF2_c_vpeq_pD_dot_pD.o \
QLA_DF2_c_vpeq_P_dot_P.o \
QLA_DF2_c_vpeq_P_dot_pP.o \
QLA_DF2_c_vpeq_pH_dot_H.o \
QLA_DF2_c_vpeq_pH_dot_pH.o \
QLA_DF2_c_vpeq_pM_dot_M.o \
QLA_DF2_c_vpeq_pM_dot_pM.o \
QLA_DF2_c_vpeq_pP_dot_P.o \
QLA_DF2_c_vpeq_pP_dot_pP.o \
QLA_DF2_c_vpeq_pV_dot_pV.o \
QLA_DF2_c_vpeq_pV_dot_V.o \
QLA_DF2_c_vpeq_V_dot_pV.o \
QLA_DF2_c_vpeq_V_dot_V.o \
QLA_DF2_c_xeq_D_dot_D.o \
QLA_DF2_c_xeq_D_dot_pD.o \
QLA_DF2_c_xeq_H_dot_H.o \
QLA_DF2_c_xeq_H_dot_pH.o \
QLA_DF2_c_xeqm_D_dot_D.o \
QLA_DF2_c_xeqm_D_dot_pD.o \
QLA_DF2_c_xeq_M_dot_M.o \
QLA_DF2_c_xeq_M_dot_pM.o \
QLA_DF2_c_xeqm_H_dot_H.o \
QLA_DF2_c_xeqm_H_dot_pH.o \
QLA_DF2_c_xeqm_M_dot_M.o \
QLA_DF2_c_xeqm_M_dot_pM.o \
QLA_DF2_c_xeqm_pD_dot_D.o \
QLA_DF2_c_xeqm_pD_dot_pD.o \
QLA_DF2_c_xeqm_P_dot_P.o \
QLA_DF2_c_xeqm_P_dot_pP.o \
QLA_DF2_c_xeqm_pH_dot_H.o \
QLA_DF2_c_xeqm_pH_dot_pH.o \
QLA_DF2_c_xeqm_pM_dot_M.o \
QLA_DF2_c_xeqm_pM_dot_pM.o \
QLA_DF2_c_xeqm_pP_dot_P.o \
QLA_DF2_c_xeqm_pP_dot_pP.o \
QLA_DF2_c_xeqm_pV_dot_pV.o \
QLA_DF2_c_xeqm_pV_dot_V.o \
QLA_DF2_c_xeqm_V_dot_pV.o \
QLA_DF2_c_xeqm_V_dot_V.o \
QLA_DF2_c_xeq_pD_dot_D.o \
QLA_DF2_c_xeq_pD_dot_pD.o \
QLA_DF2_c_xeq_P_dot_P.o \
QLA_DF2_c_xeq_P_dot_pP.o \
QLA_DF2_c_xeq_pH_dot_H.o \
QLA_DF2_c_xeq_pH_dot_pH.o \
QLA_DF2_c_xeq_pM_dot_M.o \
QLA_DF2_c_xeq_pM_dot_pM.o \
QLA_DF2_c_xeq_pP_dot_P.o \
QLA_DF2_c_xeq_pP_dot_pP.o \
QLA_DF2_c_xeq_pV_dot_pV.o \
QLA_DF2_c_xeq_pV_dot_V.o \
QLA_DF2_c_xeq_V_dot_pV.o \
QLA_DF2_c_xeq_V_dot_V.o \
QLA_DF2_c_xmeq_D_dot_D.o \
QLA_DF2_c_xmeq_D_dot_pD.o \
QLA_DF2_c_xmeq_H_dot_H.o \
QLA_DF2_c_xmeq_H_dot_pH.o \
QLA_DF2_c_xmeq_M_dot_M.o \
QLA_DF2_c_xmeq_M_dot_pM.o \
QLA_DF2_c_xmeq_pD_dot_D.o \
QLA_DF2_c_xmeq_pD_dot_pD.o \
QLA_DF2_c_xmeq_P_dot_P.o \
QLA_DF2_c_xmeq_P_dot_pP.o \
QLA_DF2_c_xmeq_pH_dot_H.o \
QLA_DF2_c_xmeq_pH_dot_pH.o \
QLA_DF2_c_xmeq_pM_dot_M.o \
QLA_DF2_c_xmeq_pM_dot_pM.o \
QLA_DF2_c_xmeq_pP_dot_P.o \
QLA_DF2_c_xmeq_pP_dot_pP.o \
QLA_DF2_c_xmeq_pV_dot_pV.o \
QLA_DF2_c_xmeq_pV_dot_V.o \
QLA_DF2_c_xmeq_V_dot_pV.o \
QLA_DF2_c_xmeq_V_dot_V.o \
QLA_DF2_c_xpeq_D_dot_D.o \
QLA_DF2_c_xpeq_D_dot_pD.o \
QLA_DF2_c_xpeq_H_dot_H.o \
QLA_DF2_c_xpeq_H_dot_pH.o \
QLA_DF2_c_xpeq_M_dot_M.o \
QLA_DF2_c_xpeq_M_dot_pM.o \
QLA_DF2_c_xpeq_pD_dot_D.o \
QLA_DF2_c_xpeq_pD_dot_pD.o \
QLA_DF2_c_xpeq_P_dot_P.o \
QLA_DF2_c_xpeq_P_dot_pP.o \
QLA_DF2_c_xpeq_pH_dot_H.o \
QLA_DF2_c_xpeq_pH_dot_pH.o \
QLA_DF2_c_xpeq_pM_dot_M.o \
QLA_DF2_c_xpeq_pM_dot_pM.o \
QLA_DF2_c_xpeq_pP_dot_P.o \
QLA_DF2_c_xpeq_pP_dot_pP.o \
QLA_DF2_c_xpeq_pV_dot_pV.o \
QLA_DF2_c_xpeq_pV_dot_V.o \
QLA_DF2_c_xpeq_V_dot_pV.o \
QLA_DF2_c_xpeq_V_dot_V.o \
QLA_DF2_D_eq_D.o \
QLA_DF2_d_eqm_sum_D.o \
QLA_DF2_d_eq_sum_D.o \
QLA_DF2_d_meq_sum_D.o \
QLA_DF2_d_peq_sum_D.o \
QLA_DF2_D_veq_D.o \
QLA_DF2_d_veqm_sum_D.o \
QLA_DF2_d_veqm_sum_pD.o \
QLA_DF2_D_veq_pD.o \
QLA_DF2_d_veq_sum_D.o \
QLA_DF2_d_veq_sum_pD.o \
QLA_DF2_d_vmeq_sum_D.o \
QLA_DF2_d_vmeq_sum_pD.o \
QLA_DF2_d_vpeq_sum_D.o \
QLA_DF2_d_vpeq_sum_pD.o \
QLA_DF2_D_xeq_D.o \
QLA_DF2_d_xeqm_sum_D.o \
QLA_DF2_d_xeqm_sum_pD.o \
QLA_DF2_D_xeq_pD.o \
QLA_DF2_d_xeq_sum_D.o \
QLA_DF2_d_xeq_sum_pD.o \
QLA_DF2_d_xmeq_sum_D.o \
QLA_DF2_d_xmeq_sum_pD.o \
QLA_DF2_d_xpeq_sum_D.o \
QLA_DF2_d_xpeq_sum_pD.o \
QLA_DF2_H_eq_H.o \
QLA_DF2_h_eqm_sum_H.o \
QLA_DF2_h_eq_sum_H.o \
QLA_DF2_h_meq_sum_H.o \
QLA_DF2_h_peq_sum_H.o \
QLA_DF2_H_veq_H.o \
QLA_DF2_h_veqm_sum_H.o \
QLA_DF2_h_veqm_sum_pH.o \
QLA_DF2_H_veq_pH.o \
QLA_DF2_h_veq_sum_H.o \
QLA_DF2_h_veq_sum_pH.o \
QLA_DF2_h_vmeq_sum_H.o \
QLA_DF2_h_vmeq_sum_pH.o \
QLA_DF2_h_vpeq_sum_H.o \
QLA_DF2_h_vpeq_sum_pH.o \
QLA_DF2_H_xeq_H.o \
QLA_DF2_h_xeqm_sum_H.o \
QLA_DF2_h_xeqm_sum_pH.o \
QLA_DF2_H_xeq_pH.o \
QLA_DF2_h_xeq_sum_H.o \
QLA_DF2_h_xeq_sum_pH.o \
QLA_DF2_h_xmeq_sum_H.o \
QLA_DF2_h_xmeq_sum_pH.o \
QLA_DF2_h_xpeq_sum_H.o \
QLA_DF2_h_xpeq_sum_pH.o \
QLA_DF2_M_eq_M.o \
QLA_DF2_m_eqm_sum_M.o \
QLA_DF2_m_eq_sum_M.o \
QLA_DF2_m_meq_sum_M.o \
QLA_DF2_m_peq_sum_M.o \
QLA_DF2_M_veq_M.o \
QLA_DF2_m_veqm_sum_M.o \
QLA_DF2_m_veqm_sum_pM.o \
QLA_DF2_M_veq_pM.o \
QLA_DF2_m_veq_sum_M.o \
QLA_DF2_m_veq_sum_pM.o \
QLA_DF2_m_vmeq_sum_M.o \
QLA_DF2_m_vmeq_sum_pM.o \
QLA_DF2_m_vpeq_sum_M.o \
QLA_DF2_m_vpeq_sum_pM.o \
QLA_DF2_M_xeq_M.o \
QLA_DF2_m_xeqm_sum_M.o \
QLA_DF2_m_xeqm_sum_pM.o \
QLA_DF2_M_xeq_pM.o \
QLA_DF2_m_xeq_sum_M.o \
QLA_DF2_m_xeq_sum_pM.o \
QLA_DF2_m_xmeq_sum_M.o \
QLA_DF2_m_xmeq_sum_pM.o \
QLA_DF2_m_xpeq_sum_M.o \
QLA_DF2_m_xpeq_sum_pM.o \
QLA_DF2_p_eqm_sum_P.o \
QLA_DF2_P_eq_P.o \
QLA_DF2_p_eq_sum_P.o \
QLA_DF2_p_meq_sum_P.o \
QLA_DF2_p_peq_sum_P.o \
QLA_DF2_p_veqm_sum_P.o \
QLA_DF2_p_veqm_sum_pP.o \
QLA_DF2_P_veq_P.o \
QLA_DF2_P_veq_pP.o \
QLA_DF2_p_veq_sum_P.o \
QLA_DF2_p_veq_sum_pP.o \
QLA_DF2_p_vmeq_sum_P.o \
QLA_DF2_p_vmeq_sum_pP.o \
QLA_DF2_p_vpeq_sum_P.o \
QLA_DF2_p_vpeq_sum_pP.o \
QLA_DF2_p_xeqm_sum_P.o \
QLA_DF2_p_xeqm_sum_pP.o \
QLA_DF2_P_xeq_P.o \
QLA_DF2_P_xeq_pP.o \
QLA_DF2_p_xeq_sum_P.o \
QLA_DF2_p_xeq_sum_pP.o \
QLA_DF2_p_xmeq_sum_P.o \
QLA_DF2_p_xmeq_sum_pP.o \
QLA_DF2_p_xpeq_sum_P.o \
QLA_DF2_p_xpeq_sum_pP.o \
QLA_DF2_r_eqm_norm2_D.o \
QLA_DF2_r_eqm_norm2_H.o \
QLA_DF2_r_eqm_norm2_M.o \
QLA_DF2_r_eqm_norm2_P.o \
QLA_DF2_r_eqm_norm2_V.o \
QLA_DF2_r_eqm_re_D_dot_D.o \
QLA_DF2_r_eqm_re_H_dot_H.o \
QLA_DF2_r_eqm_re_M_dot_M.o \
QLA_DF2_r_eqm_re_P_dot_P.o \
QLA_DF2_r_eqm_re_V_dot_V.o \
QLA_DF2_r_eq_norm2_D.o \
QLA_DF2_r_eq_norm2_H.o \
QLA_DF2_r_eq_norm2_M.o \
QLA_DF2_r_eq_norm2_P.o \
QLA_DF2_r_eq_norm2_V.o \
QLA_DF2_r_eq_re_D_dot_D.o \
QLA_DF2_r_eq_re_H_dot_H.o \
QLA_DF2_r_eq_re_M_dot_M.o \
QLA_DF2_r_eq_re_P_dot_P.o \
QLA_DF2_r_eq_re_V_dot_V.o \
QLA_DF2_r_meq_norm2_D.o \
QLA_DF2_r_meq_norm2_H.o \
QLA_DF2_r_meq_norm2_M.o \
QLA_DF2_r_meq_norm2_P.o \
QLA_DF2_r_meq_norm2_V.o \
QLA_DF2_r_meq_re_D_dot_D.o \
QLA_DF2_r_meq_re_H_dot_H.o \
QLA_DF2_r_meq_re_M_dot_M.o \
QLA_DF2_r_meq_re_P_dot_P.o \
QLA_DF2_r_meq_re_V_dot_V.o \
QLA_DF2_r_peq_norm2_D.o \
QLA_DF2_r_peq_norm2_H.o \
QLA_DF2_r_peq_norm2_M.o \
QLA_DF2_r_peq_norm2_P.o \
QLA_DF2_r_peq_norm2_V.o \
QLA_DF2_r_peq_re_D_dot_D.o \
QLA_DF2_r_peq_re_H_dot_H.o \
QLA_DF2_r_peq_re_M_dot_M.o \
QLA_DF2_r_peq_re_P_dot_P.o \
QLA_DF2_r_peq_re_V_dot_V.o \
QLA_DF2_r_veqm_norm2_D.o \
QLA_DF2_r_veqm_norm2_H.o \
QLA_DF2_r_veqm_norm2_M.o \
QLA_DF2_r_veqm_norm2_P.o \
QLA_DF2_r_veqm_norm2_pD.o \
QLA_DF2_r_veqm_norm2_pH.o \
QLA_DF2_r_veqm_norm2_pM.o \
QLA_DF2_r_veqm_norm2_pP.o \
QLA_DF2_r_veqm_norm2_pV.o \
QLA_DF2_r_veqm_norm2_V.o \
QLA_DF2_r_veqm_re_D_dot_D.o \
QLA_DF2_r_veqm_re_D_dot_pD.o \
QLA_DF2_r_veqm_re_H_dot_H.o \
QLA_DF2_r_veqm_re_H_dot_pH.o \
QLA_DF2_r_veqm_re_M_dot_M.o \
QLA_DF2_r_veqm_re_M_dot_pM.o \
QLA_DF2_r_veqm_re_pD_dot_D.o \
QLA_DF2_r_veqm_re_pD_dot_pD.o \
QLA_DF2_r_veqm_re_P_dot_P.o \
QLA_DF2_r_veqm_re_P_dot_pP.o \
QLA_DF2_r_veqm_re_pH_dot_H.o \
QLA_DF2_r_veqm_re_pH_dot_pH.o \
QLA_DF2_r_veqm_re_pM_dot_M.o \
QLA_DF2_r_veqm_re_pM_dot_pM.o \
QLA_DF2_r_veqm_re_pP_dot_P.o \
QLA_DF2_r_veqm_re_pP_dot_pP.o \
QLA_DF2_r_veqm_re_pV_dot_pV.o \
QLA_DF2_r_veqm_re_pV_dot_V.o \
QLA_DF2_r_veqm_re_V_dot_pV.o \
QLA_DF2_r_veqm_re_V_dot_V.o \
QLA_DF2_r_veq_norm2_D.o \
QLA_DF2_r_veq_norm2_H.o \
QLA_DF2_r_veq_norm2_M.o \
QLA_DF2_r_veq_norm2_P.o \
QLA_DF2_r_veq_norm2_pD.o \
QLA_DF2_r_veq_norm2_pH.o \
QLA_DF2_r_veq_norm2_pM.o \
QLA_DF2_r_veq_norm2_pP.o \
QLA_DF2_r_veq_norm2_pV.o \
QLA_DF2_r_veq_norm2_V.o \
QLA_DF2_r_veq_re_D_dot_D.o \
QLA_DF2_r_veq_re_D_dot_pD.o \
QLA_DF2_r_veq_re_H_dot_H.o \
QLA_DF2_r_veq_re_H_dot_pH.o \
QLA_DF2_r_veq_re_M_dot_M.o \
QLA_DF2_r_veq_re_M_dot_pM.o \
QLA_DF2_r_veq_re_pD_dot_D.o \
QLA_DF2_r_veq_re_pD_dot_pD.o \
QLA_DF2_r_veq_re_P_dot_P.o \
QLA_DF2_r_veq_re_P_dot_pP.o \
QLA_DF2_r_veq_re_pH_dot_H.o \
QLA_DF2_r_veq_re_pH_dot_pH.o \
QLA_DF2_r_veq_re_pM_dot_M.o \
QLA_DF2_r_veq_re_pM_dot_pM.o \
QLA_DF2_r_veq_re_pP_dot_P.o \
QLA_DF2_r_veq_re_pP_dot_pP.o \
QLA_DF2_r_veq_re_pV_dot_pV.o \
QLA_DF2_r_veq_re_pV_dot_V.o \
QLA_DF2_r_veq_re_V_dot_pV.o \
QLA_DF2_r_veq_re_V_dot_V.o \
QLA_DF2_r_vmeq_norm2_D.o \
QLA_DF2_r_vmeq_norm2_H.o \
QLA_DF2_r_vmeq_norm2_M.o \
QLA_DF2_r_vmeq_norm2_P.o \
QLA_DF2_r_vmeq_norm2_pD.o \
QLA_DF2_r_vmeq_norm2_pH.o \
QLA_DF2_r_vmeq_norm2_pM.o \
QLA_DF2_r_vmeq_norm2_pP.o \
QLA_DF2_r_vmeq_norm2_pV.o \
QLA_DF2_r_vmeq_norm2_V.o \
QLA_DF2_r_vmeq_re_D_dot_D.o \
QLA_DF2_r_vmeq_re_D_dot_pD.o \
QLA_DF2_r_vmeq_re_H_dot_H.o \
QLA_DF2_r_vmeq_re_H_dot_pH.o \
QLA_DF2_r_vmeq_re_M_dot_M.o \
QLA_DF2_r_vmeq_re_M_dot_pM.o \
QLA_DF2_r_vmeq_re_pD_dot_D.o \
QLA_DF2_r_vmeq_re_pD_dot_pD.o \
QLA_DF2_r_vmeq_re_P_dot_P.o \
QLA_DF2_r_vmeq_re_P_dot_pP.o \
QLA_DF2_r_vmeq_re_pH_dot_H.o \
QLA_DF2_r_vmeq_re_pH_dot_pH.o \
QLA_DF2_r_vmeq_re_pM_dot_M.o \
QLA_DF2_r_vmeq_re_pM_dot_pM.o \
QLA_DF2_r_vmeq_re_pP_dot_P.o \
QLA_DF2_r_vmeq_re_pP_dot_pP.o \
QLA_DF2_r_vmeq_re_pV_dot_pV.o \
QLA_DF2_r_vmeq_re_pV_dot_V.o \
QLA_DF2_r_vmeq_re_V_dot_pV.o \
QLA_DF2_r_vmeq_re_V_dot_V.o \
QLA_DF2_r_vpeq_norm2_D.o \
QLA_DF2_r_vpeq_norm2_H.o \
QLA_DF2_r_vpeq_norm2_M.o \
QLA_DF2_r_vpeq_norm2_P.o \
QLA_DF2_r_vpeq_norm2_pD.o \
QLA_DF2_r_vpeq_norm2_pH.o \
QLA_DF2_r_vpeq_norm2_pM.o \
QLA_DF2_r_vpeq_norm2_pP.o \
QLA_DF2_r_vpeq_norm2_pV.o \
QLA_DF2_r_vpeq_norm2_V.o \
QLA_DF2_r_vpeq_re_D_dot_D.o \
QLA_DF2_r_vpeq_re_D_dot_pD.o \
QLA_DF2_r_vpeq_re_H_dot_H.o \
QLA_DF2_r_vpeq_re_H_dot_pH.o \
QLA_DF2_r_vpeq_re_M_dot_M.o \
QLA_DF2_r_vpeq_re_M_dot_pM.o \
QLA_DF2_r_vpeq_re_pD_dot_D.o \
QLA_DF2_r_vpeq_re_pD_dot_pD.o \
QLA_DF2_r_vpeq_re_P_dot_P.o \
QLA_DF2_r_vpeq_re_P_dot_pP.o \
QLA_DF2_r_vpeq_re_pH_dot_H.o \
QLA_DF2_r_vpeq_re_pH_dot_pH.o \
QLA_DF2_r_vpeq_re_pM_dot_M.o \
QLA_DF2_r_vpeq_re_pM_dot_pM.o \
QLA_DF2_r_vpeq_re_pP_dot_P.o \
QLA_DF2_r_vpeq_re_pP_dot_pP.o \
QLA_DF2_r_vpeq_re_pV_dot_pV.o \
QLA_DF2_r_vpeq_re_pV_dot_V.o \
QLA_DF2_r_vpeq_re_V_dot_pV.o \
QLA_DF2_r_vpeq_re_V_dot_V.o \
QLA_DF2_r_xeqm_norm2_D.o \
QLA_DF2_r_xeqm_norm2_H.o \
QLA_DF2_r_xeqm_norm2_M.o \
QLA_DF2_r_xeqm_norm2_P.o \
QLA_DF2_r_xeqm_norm2_pD.o \
QLA_DF2_r_xeqm_norm2_pH.o \
QLA_DF2_r_xeqm_norm2_pM.o \
QLA_DF2_r_xeqm_norm2_pP.o \
QLA_DF2_r_xeqm_norm2_pV.o \
QLA_DF2_r_xeqm_norm2_V.o \
QLA_DF2_r_xeqm_re_D_dot_D.o \
QLA_DF2_r_xeqm_re_D_dot_pD.o \
QLA_DF2_r_xeqm_re_H_dot_H.o \
QLA_DF2_r_xeqm_re_H_dot_pH.o \
QLA_DF2_r_xeqm_re_M_dot_M.o \
QLA_DF2_r_xeqm_re_M_dot_pM.o \
QLA_DF2_r_xeqm_re_pD_dot_D.o \
QLA_DF2_r_xeqm_re_pD_dot_pD.o \
QLA_DF2_r_xeqm_re_P_dot_P.o \
QLA_DF2_r_xeqm_re_P_dot_pP.o \
QLA_DF2_r_xeqm_re_pH_dot_H.o \
QLA_DF2_r_xeqm_re_pH_dot_pH.o \
QLA_DF2_r_xeqm_re_pM_dot_M.o \
QLA_DF2_r_xeqm_re_pM_dot_pM.o \
QLA_DF2_r_xeqm_re_pP_dot_P.o \
QLA_DF2_r_xeqm_re_pP_dot_pP.o \
QLA_DF2_r_xeqm_re_pV_dot_pV.o \
QLA_DF2_r_xeqm_re_pV_dot_V.o \
QLA_DF2_r_xeqm_re_V_dot_pV.o \
QLA_DF2_r_xeqm_re_V_dot_V.o \
QLA_DF2_r_xeq_norm2_D.o \
QLA_DF2_r_xeq_norm2_H.o \
QLA_DF2_r_xeq_norm2_M.o \
QLA_DF2_r_xeq_norm2_P.o \
QLA_DF2_r_xeq_norm2_pD.o \
QLA_DF2_r_xeq_norm2_pH.o \
QLA_DF2_r_xeq_norm2_pM.o \
QLA_DF2_r_xeq_norm2_pP.o \
QLA_DF2_r_xeq_norm2_pV.o \
QLA_DF2_r_xeq_norm2_V.o \
QLA_DF2_r_xeq_re_D_dot_D.o \
QLA_DF2_r_xeq_re_D_dot_pD.o \
QLA_DF2_r_xeq_re_H_dot_H.o \
QLA_DF2_r_xeq_re_H_dot_pH.o \
QLA_DF2_r_xeq_re_M_dot_M.o \
QLA_DF2_r_xeq_re_M_dot_pM.o \
QLA_DF2_r_xeq_re_pD_dot_D.o \
QLA_DF2_r_xeq_re_pD_dot_pD.o \
QLA_DF2_r_xeq_re_P_dot_P.o \
QLA_DF2_r_xeq_re_P_dot_pP.o \
QLA_DF2_r_xeq_re_pH_dot_H.o \
QLA_DF2_r_xeq_re_pH_dot_pH.o \
QLA_DF2_r_xeq_re_pM_dot_M.o \
QLA_DF2_r_xeq_re_pM_dot_pM.o \
QLA_DF2_r_xeq_re_pP_dot_P.o \
QLA_DF2_r_xeq_re_pP_dot_pP.o \
QLA_DF2_r_xeq_re_pV_dot_pV.o \
QLA_DF2_r_xeq_re_pV_dot_V.o \
QLA_DF2_r_xeq_re_V_dot_pV.o \
QLA_DF2_r_xeq_re_V_dot_V.o

QLASRC2 = \
QLA_DF2_r_xmeq_norm2_D.c \
QLA_DF2_r_xmeq_norm2_H.c \
QLA_DF2_r_xmeq_norm2_M.c \
QLA_DF2_r_xmeq_norm2_P.c \
QLA_DF2_r_xmeq_norm2_pD.c \
QLA_DF2_r_xmeq_norm2_pH.c \
QLA_DF2_r_xmeq_norm2_pM.c \
QLA_DF2_r_xmeq_norm2_pP.c \
QLA_DF2_r_xmeq_norm2_pV.c \
QLA_DF2_r_xmeq_norm2_V.c \
QLA_DF2_r_xmeq_re_D_dot_D.c \
QLA_DF2_r_xmeq_re_D_dot_pD.c \
QLA_DF2_r_xmeq_re_H_dot_H.c \
QLA_DF2_r_xmeq_re_H_dot_pH.c \
QLA_DF2_r_xmeq_re_M_dot_M.c \
QLA_DF2_r_xmeq_re_M_dot_pM.c \
QLA_DF2_r_xmeq_re_pD_dot_D.c \
QLA_DF2_r_xmeq_re_pD_dot_pD.c \
QLA_DF2_r_xmeq_re_P_dot_P.c \
QLA_DF2_r_xmeq_re_P_dot_pP.c \
QLA_DF2_r_xmeq_re_pH_dot_H.c \
QLA_DF2_r_xmeq_re_pH_dot_pH.c \
QLA_DF2_r_xmeq_re_pM_dot_M.c \
QLA_DF2_r_xmeq_re_pM_dot_pM.c \
QLA_DF2_r_xmeq_re_pP_dot_P.c \
QLA_DF2_r_xmeq_re_pP_dot_pP.c \
QLA_DF2_r_xmeq_re_pV_dot_pV.c \
QLA_DF2_r_xmeq_re_pV_dot_V.c \
QLA_DF2_r_xmeq_re_V_dot_pV.c \
QLA_DF2_r_xmeq_re_V_dot_V.c \
QLA_DF2_r_xpeq_norm2_D.c \
QLA_DF2_r_xpeq_norm2_H.c \
QLA_DF2_r_xpeq_norm2_M.c \
QLA_DF2_r_xpeq_norm2_P.c \
QLA_DF2_r_xpeq_norm2_pD.c \
QLA_DF2_r_xpeq_norm2_pH.c \
QLA_DF2_r_xpeq_norm2_pM.c \
QLA_DF2_r_xpeq_norm2_pP.c \
QLA_DF2_r_xpeq_norm2_pV.c \
QLA_DF2_r_xpeq_norm2_V.c \
QLA_DF2_r_xpeq_re_D_dot_D.c \
QLA_DF2_r_xpeq_re_D_dot_pD.c \
QLA_DF2_r_xpeq_re_H_dot_H.c \
QLA_DF2_r_xpeq_re_H_dot_pH.c \
QLA_DF2_r_xpeq_re_M_dot_M.c \
QLA_DF2_r_xpeq_re_M_dot_pM.c \
QLA_DF2_r_xpeq_re_pD_dot_D.c \
QLA_DF2_r_xpeq_re_pD_dot_pD.c \
QLA_DF2_r_xpeq_re_P_dot_P.c \
QLA_DF2_r_xpeq_re_P_dot_pP.c \
QLA_DF2_r_xpeq_re_pH_dot_H.c \
QLA_DF2_r_xpeq_re_pH_dot_pH.c \
QLA_DF2_r_xpeq_re_pM_dot_M.c \
QLA_DF2_r_xpeq_re_pM_dot_pM.c \
QLA_DF2_r_xpeq_re_pP_dot_P.c \
QLA_DF2_r_xpeq_re_pP_dot_pP.c \
QLA_DF2_r_xpeq_re_pV_dot_pV.c \
QLA_DF2_r_xpeq_re_pV_dot_V.c \
QLA_DF2_r_xpeq_re_V_dot_pV.c \
QLA_DF2_r_xpeq_re_V_dot_V.c \
QLA_DF2_v_eqm_sum_V.c \
QLA_DF2_v_eq_sum_V.c \
QLA_DF2_V_eq_V.c \
QLA_DF2_v_meq_sum_V.c \
QLA_DF2_v_peq_sum_V.c \
QLA_DF2_v_veqm_sum_pV.c \
QLA_DF2_v_veqm_sum_V.c \
QLA_DF2_V_veq_pV.c \
QLA_DF2_v_veq_sum_pV.c \
QLA_DF2_v_veq_sum_V.c \
QLA_DF2_V_veq_V.c \
QLA_DF2_v_vmeq_sum_pV.c \
QLA_DF2_v_vmeq_sum_V.c \
QLA_DF2_v_vpeq_sum_pV.c \
QLA_DF2_v_vpeq_sum_V.c \
QLA_DF2_v_xeqm_sum_pV.c \
QLA_DF2_v_xeqm_sum_V.c \
QLA_DF2_V_xeq_pV.c \
QLA_DF2_v_xeq_sum_pV.c \
QLA_DF2_v_xeq_sum_V.c \
QLA_DF2_V_xeq_V.c \
QLA_DF2_v_xmeq_sum_pV.c \
QLA_DF2_v_xmeq_sum_V.c \
QLA_DF2_v_xpeq_sum_pV.c \
QLA_DF2_v_xpeq_sum_V.c \
QLA_FD2_D_eq_D.c \
QLA_FD2_D_veq_D.c \
QLA_FD2_D_veq_pD.c \
QLA_FD2_D_xeq_D.c \
QLA_FD2_D_xeq_pD.c \
QLA_FD2_H_eq_H.c \
QLA_FD2_H_veq_H.c \
QLA_FD2_H_veq_pH.c \
QLA_FD2_H_xeq_H.c \
QLA_FD2_H_xeq_pH.c \
QLA_FD2_M_eq_M.c \
QLA_FD2_M_veq_M.c \
QLA_FD2_M_veq_pM.c \
QLA_FD2_M_xeq_M.c \
QLA_FD2_M_xeq_pM.c \
QLA_FD2_P_eq_P.c \
QLA_FD2_P_veq_P.c \
QLA_FD2_P_veq_pP.c \
QLA_FD2_P_xeq_P.c \
QLA_FD2_P_xeq_pP.c \
QLA_FD2_V_eq_V.c \
QLA_FD2_V_veq_pV.c \
QLA_FD2_V_veq_V.c \
QLA_FD2_V_xeq_pV.c \
QLA_FD2_V_xeq_V.c

QLAOBJ2 = \
QLA_DF2_r_xmeq_norm2_D.o \
QLA_DF2_r_xmeq_norm2_H.o \
QLA_DF2_r_xmeq_norm2_M.o \
QLA_DF2_r_xmeq_norm2_P.o \
QLA_DF2_r_xmeq_norm2_pD.o \
QLA_DF2_r_xmeq_norm2_pH.o \
QLA_DF2_r_xmeq_norm2_pM.o \
QLA_DF2_r_xmeq_norm2_pP.o \
QLA_DF2_r_xmeq_norm2_pV.o \
QLA_DF2_r_xmeq_norm2_V.o \
QLA_DF2_r_xmeq_re_D_dot_D.o \
QLA_DF2_r_xmeq_re_D_dot_pD.o \
QLA_DF2_r_xmeq_re_H_dot_H.o \
QLA_DF2_r_xmeq_re_H_dot_pH.o \
QLA_DF2_r_xmeq_re_M_dot_M.o \
QLA_DF2_r_xmeq_re_M_dot_pM.o \
QLA_DF2_r_xmeq_re_pD_dot_D.o \
QLA_DF2_r_xmeq_re_pD_dot_pD.o \
QLA_DF2_r_xmeq_re_P_dot_P.o \
QLA_DF2_r_xmeq_re_P_dot_pP.o \
QLA_DF2_r_xmeq_re_pH_dot_H.o \
QLA_DF2_r_xmeq_re_pH_dot_pH.o \
QLA_DF2_r_xmeq_re_pM_dot_M.o \
QLA_DF2_r_xmeq_re_pM_dot_pM.o \
QLA_DF2_r_xmeq_re_pP_dot_P.o \
QLA_DF2_r_xmeq_re_pP_dot_pP.o \
QLA_DF2_r_xmeq_re_pV_dot_pV.o \
QLA_DF2_r_xmeq_re_pV_dot_V.o \
QLA_DF2_r_xmeq_re_V_dot_pV.o \
QLA_DF2_r_xmeq_re_V_dot_V.o \
QLA_DF2_r_xpeq_norm2_D.o \
QLA_DF2_r_xpeq_norm2_H.o \
QLA_DF2_r_xpeq_norm2_M.o \
QLA_DF2_r_xpeq_norm2_P.o \
QLA_DF2_r_xpeq_norm2_pD.o \
QLA_DF2_r_xpeq_norm2_pH.o \
QLA_DF2_r_xpeq_norm2_pM.o \
QLA_DF2_r_xpeq_norm2_pP.o \
QLA_DF2_r_xpeq_norm2_pV.o \
QLA_DF2_r_xpeq_norm2_V.o \
QLA_DF2_r_xpeq_re_D_dot_D.o \
QLA_DF2_r_xpeq_re_D_dot_pD.o \
QLA_DF2_r_xpeq_re_H_dot_H.o \
QLA_DF2_r_xpeq_re_H_dot_pH.o \
QLA_DF2_r_xpeq_re_M_dot_M.o \
QLA_DF2_r_xpeq_re_M_dot_pM.o \
QLA_DF2_r_xpeq_re_pD_dot_D.o \
QLA_DF2_r_xpeq_re_pD_dot_pD.o \
QLA_DF2_r_xpeq_re_P_dot_P.o \
QLA_DF2_r_xpeq_re_P_dot_pP.o \
QLA_DF2_r_xpeq_re_pH_dot_H.o \
QLA_DF2_r_xpeq_re_pH_dot_pH.o \
QLA_DF2_r_xpeq_re_pM_dot_M.o \
QLA_DF2_r_xpeq_re_pM_dot_pM.o \
QLA_DF2_r_xpeq_re_pP_dot_P.o \
QLA_DF2_r_xpeq_re_pP_dot_pP.o \
QLA_DF2_r_xpeq_re_pV_dot_pV.o \
QLA_DF2_r_xpeq_re_pV_dot_V.o \
QLA_DF2_r_xpeq_re_V_dot_pV.o \
QLA_DF2_r_xpeq_re_V_dot_V.o \
QLA_DF2_v_eqm_sum_V.o \
QLA_DF2_v_eq_sum_V.o \
QLA_DF2_V_eq_V.o \
QLA_DF2_v_meq_sum_V.o \
QLA_DF2_v_peq_sum_V.o \
QLA_DF2_v_veqm_sum_pV.o \
QLA_DF2_v_veqm_sum_V.o \
QLA_DF2_V_veq_pV.o \
QLA_DF2_v_veq_sum_pV.o \
QLA_DF2_v_veq_sum_V.o \
QLA_DF2_V_veq_V.o \
QLA_DF2_v_vmeq_sum_pV.o \
QLA_DF2_v_vmeq_sum_V.o \
QLA_DF2_v_vpeq_sum_pV.o \
QLA_DF2_v_vpeq_sum_V.o \
QLA_DF2_v_xeqm_sum_pV.o \
QLA_DF2_v_xeqm_sum_V.o \
QLA_DF2_V_xeq_pV.o \
QLA_DF2_v_xeq_sum_pV.o \
QLA_DF2_v_xeq_sum_V.o \
QLA_DF2_V_xeq_V.o \
QLA_DF2_v_xmeq_sum_pV.o \
QLA_DF2_v_xmeq_sum_V.o \
QLA_DF2_v_xpeq_sum_pV.o \
QLA_DF2_v_xpeq_sum_V.o \
QLA_FD2_D_eq_D.o \
QLA_FD2_D_veq_D.o \
QLA_FD2_D_veq_pD.o \
QLA_FD2_D_xeq_D.o \
QLA_FD2_D_xeq_pD.o \
QLA_FD2_H_eq_H.o \
QLA_FD2_H_veq_H.o \
QLA_FD2_H_veq_pH.o \
QLA_FD2_H_xeq_H.o \
QLA_FD2_H_xeq_pH.o \
QLA_FD2_M_eq_M.o \
QLA_FD2_M_veq_M.o \
QLA_FD2_M_veq_pM.o \
QLA_FD2_M_xeq_M.o \
QLA_FD2_M_xeq_pM.o \
QLA_FD2_P_eq_P.o \
QLA_FD2_P_veq_P.o \
QLA_FD2_P_veq_pP.o \
QLA_FD2_P_xeq_P.o \
QLA_FD2_P_xeq_pP.o \
QLA_FD2_V_eq_V.o \
QLA_FD2_V_veq_pV.o \
QLA_FD2_V_veq_V.o \
QLA_FD2_V_xeq_pV.o \
QLA_FD2_V_xeq_V.o

QLASRC = $(QLASRC1) $(QLASRC2)
QLAOBJ = $(QLAOBJ1) $(QLAOBJ2)

BUILD_SCRIPT_DIR = $(top_srcdir)/lib/perl

BUILD_SCRIPT = $(BUILD_SCRIPT_DIR)/build_qla.pl

BUILD_DEPS = \
	$(BUILD_SCRIPT_DIR)/build_qla.pl \
	$(BUILD_SCRIPT_DIR)/datatypes.pl \
	$(BUILD_SCRIPT_DIR)/expressions_gamma.pl \
	$(BUILD_SCRIPT_DIR)/expressions_scalar.pl \
	$(BUILD_SCRIPT_DIR)/expressions_tensor.pl \
	$(BUILD_SCRIPT_DIR)/formatting.pl \
	$(BUILD_SCRIPT_DIR)/headers.pl \
	$(BUILD_SCRIPT_DIR)/indirection.pl \
	$(BUILD_SCRIPT_DIR)/make_code_binary.pl \
	$(BUILD_SCRIPT_DIR)/make_code_real_complex.pl \
	$(BUILD_SCRIPT_DIR)/make_code_ternary.pl \
	$(BUILD_SCRIPT_DIR)/make_code_unary.pl \
	$(BUILD_SCRIPT_DIR)/operatortypes.pl \
	$(BUILD_SCRIPT_DIR)/prototype.pl \
	$(BUILD_SCRIPT_DIR)/variable_names.pl

lib_LIBRARIES = ../libqla_df2.a

AM_CFLAGS = -I$(top_srcdir)/include

# this is just to force automake to include the .c.o rule
nodist____libqla_df2_a_SOURCES = QLA_DF2_c_eq_D_dot_D.c

nodist_include_HEADERS = $(top_builddir)/include/qla_df2.h $(top_builddir)/include/qla_df2_color_generic.h

$(QLASRC): $(BUILD_DEPS)
	$(PERL) $(BUILD_SCRIPT) QLA_DF2 $(top_builddir)/include/qla_df2.h .

../libqla_df2.a: $(QLAOBJ) ../optimized/Makefile
	-rm -f ../libqla_df2.a
	$(AR) $(ARFLAGS) ../libqla_df2.a $(QLAOBJ1)
	$(AR) $(ARFLAGS) ../libqla_df2.a $(QLAOBJ2)
	$(RANLIB) ../libqla_df2.a

clean-local:
	-rm -f $(top_builddir)/include/qla_df2.h $(top_builddir)/include/qla_df2_color_generic.h
	-rm -f $(QLASRC1)
	-rm -f $(QLAOBJ1)
	-rm -f $(QLASRC2)
	-rm -f $(QLAOBJ2)
